fixed text bubble wrap

--- a/frontend/src/components/MainChat/Chat.css
+++ b/frontend/src/components/MainChat/Chat.css
@@ -5,13 +5,24 @@
     overflow: hidden;
 }
 
+.chatName{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .leftChatBar{
-    flex: 3.5;
-    background-color: blue;
+    flex: 2.5;
+    background-color: F3F3F3;
 }
 
 .openConversation{
     flex: 5.5;
+}
+
+
+.openConversation .conversation{
+    margin: 5px 30px;
 }
 
 .leftChatBar .chatInputWrapper{
