--- a/frontend/src/components/UI/NavBar/NavBar.css
+++ b/frontend/src/components/UI/NavBar/NavBar.css
@@ -1,6 +1,15 @@
-.header{
+.chatNameContainer{
     background-color: #FFFFFF;
-    border: 1px solid;
+    border-radius: 10px;
+    width: 95%;
+    margin: 10px;
+    box-shadow:
+      0 1px 1px hsl(0deg 0% 0% / 0.075),
+      0 2px 2px hsl(0deg 0% 0% / 0.075),
+      0 4px 4px hsl(0deg 0% 0% / 0.075),
+      0 8px 8px hsl(0deg 0% 0% / 0.075),
+      0 15px 15px hsl(0deg 0% 0% / 0.075);
+    z-index: 10;
 }
 
 h3{
